# taller-micromachines

./: .gitignore  CMakeLists.txt  README.md  dependencies.sh  new_out.txt  out.txt  temp.txt  track.txt
client/: Area.cpp  Area.h  Audio.cpp  Boulder.cpp  Boulder.h  CMakeLists.txt  Camara.cpp  Camara.h  Camera.cpp  Car.cpp  Car.h  CarFrameResolver.cpp  CarFrameResolver.h  CarLivesDrawer.cpp  Client.cpp  Client.h  Launcher.cpp  Launcher.ui  LuaFile.cpp  Mud.cpp  Mud.h  Oil.cpp  Oil.h  Renderizable.cpp  Renderizable.h  SDLException.cpp  SDLException.h  SDLTexture.cpp  SDLTexture.h  SDLTextureLoader.cpp  SDLTextureLoader.h  SDLWindow.cpp  SDLWindow.h  SdlException.cpp  SdlException.h  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h  ServerProxy.cpp  (+10 more)
client/bots/: grumpy.lua  sleepy.lua
client/entities/: Boost.cpp  Boulder.cpp  Car.cpp  CarFrameResolver.cpp  CurvedRoad.cpp  Explotion.cpp  ExplotionFrameResolver.cpp  Heart.cpp  Mud.cpp  MudSplatter.cpp  MudSplatter.h  Oil.cpp  StraightRoad.cpp
client/ffmpeg/: CodecContext.cpp  Consumer.cpp  FormatOutput.cpp  Frame.cpp  Output.cpp  Packet.cpp  SwsContext.cpp
client/img/: car_colors.txt  podium.xcf
client/scripts/: AIScript.cpp  bot.lua
client/sdl_wrappers/: Area.cpp  Audio.cpp  SDLException.cpp  SDLText.cpp  SDLTexture.cpp  SDLTextureLoader.cpp  SDLWindow.cpp  StaticRenderizable.cpp
client_src/: CMakeLists.txt  Camera.cpp  Client.cpp  Launcher.cpp  ServerProxy.cpp  ThFrameDrawer.cpp  WorldEntities.cpp  main.cpp
client_src/bots/: bashful.lua  dopey.lua  happy.lua  sneezy.lua
client_src/entities/: Boost.cpp  Boulder.cpp  Car.cpp  CurvedRoad.cpp  Explotion.cpp  Heart.cpp  Mud.cpp  MudSplatter.cpp  Oil.cpp  StraightRoad.cpp
client_src/ffmpeg/: CodecContext.cpp  Consumer.cpp  FormatOutput.cpp  Frame.cpp  Output.cpp  Packet.cpp  SwsContext.cpp
client_src/img/: car_colors.txt
client_src/sdl_wrappers/: Audio.cpp  SDLText.cpp  SDLTexture.cpp  StaticRenderizable.cpp
common/: ClosedQueueException.cpp  Communication.cpp  MoveSerializer.cpp  ProtectedQueue.cpp  ProtectedQueueState.cpp  ProtectedQueueState.h  ProtectedQueueStatus.cpp  ProtectedQueueUpdate.cpp  RacesSerializer.cpp  Serializer.cpp  Socket.cpp  StateSerializer.cpp  Thread.cpp  Thread.h  TrackSerializer.cpp
common/serializers/: MoveSerializer.cpp  RacesSerializer.cpp  TrackSerializer.cpp
common_src/: ProtectedQueue.cpp  Serializer.cpp  Socket.cpp  Thread.cpp
common_src/serializers/: RacesSerializer.cpp  StateSerializer.cpp  TrackSerializer.cpp
include/client/: AIScript.h  Area.h  Audio.h  Boost.h  Boulder.h  Camara.h  Camera.h  Car.h  CarFrameResolver.h  CarLivesDrawer.h  Client.h  CodecContext.h  Consumer.h  CurvedRoad.h  Explotion.h  ExplotionFrameResolver.h  FormatOutput.h  Frame.h  Heart.h  Launcher.h  Mud.h  MudSplatter.h  Oil.h  Output.h  Packet.h  Renderizable.h  SDLException.h  SDLText.h  SDLTexture.h  SDLTextureLoader.h  SDLWindow.h  ServerProxy.h  StaticRenderizable.h  StraightRoad.h  SwsContext.h  ThFrameDrawer.h  ThStateReceiver.h  WorldEntities.h
include/common/: ClosedQueueException.h  Communication.h  CommunicationConstants.h  Constants.h  MoveSerializer.h  MoveType.h  ProtectedQueue.h  ProtectedQueueState.h  ProtectedQueueStatus.h  ProtectedQueueUpdate.h  RacesSerializer.h  Serializer.h  Socket.h  StateSerializer.h  Thread.h  TrackSerializer.h  json.h
include/scripts/: AIScript.h  LuaFile.h
include/server/: Boost.h  Boulder.h  Car.h  CarHandler.h  ClientAccepter.h  ClientProxy.h  Consumable.h  ContactListener.h  Element.h  Entity.h  Environment.h  Health.h  Limit.h  Mod.h  Mud.h  Oil.h  Player.h  Race.h  Server.h  State.h  StateHandler.h  StateReceiver.h  StateUpdater.h  Stone.h  Track.h  TrackData.h  TrackStructure.h  boost.h  car.h  car_handler.h  circuit_generator.h  event_handler.h  event_listener.h  health.h  mud.h  oil.h  player.h  race.h  server.h  stone.h  (+1 more)
informe/: Informe.md  Manual.md  clases_server_1  client.md  client_manual.md  server.md  server_manual.md
libs/LuaBridge/: List.h  Map.h  RefCountedObject.h  RefCountedPtr.h  UnorderedMap.h  Vector.h
libs/LuaBridge/detail/: CFunctions.h  ClassInfo.h  Constructor.h  FuncTraits.h  Iterator.h  LuaException.h  LuaHelpers.h  LuaRef.h  Namespace.h  Security.h  Stack.h  TypeList.h  TypeTraits.h  Userdata.h  dump.h
mods/: CMakeLists.txt  libHelloWorld.cpp  modsTests.cpp
scripts/: CMakeLists.txt  LuaFile.cpp  LuaFile.h  helloWorld.lua  scriptsTests.cpp
server/: Boost.cpp  Boulder.cpp  CMakeLists.txt  Car.cpp  CarHandler.cpp  ClientAccepter.cpp  ClientProxy.cpp  ClientProxy.h  Consumable.cpp  ContactListener.cpp  Element.cpp  Entity.cpp  Environment.cpp  Environment.h  Health.cpp  Limit.cpp  Mod.cpp  Mud.cpp  Oil.cpp  Player.cpp  Race.cpp  Server.cpp  State.cpp  StateHandler.cpp  StateReceiver.cpp  StateUpdater.cpp  Stone.cpp  Track.cpp  TrackData.cpp  TrackStructure.cpp  TrackStructure.h  boost.cpp  car.cpp  car.h  car_handler.cpp  circuit_generator.cpp  event_handler.cpp  event_listener.cpp  event_listener.h  health.cpp  (+12 more)
server/entities/: Boost.cpp  Boulder.cpp  Car.cpp  Health.cpp  Limit.cpp  Mud.cpp  Oil.cpp  Track.cpp
server/mods/: libAlwaysMud.cpp  libMiddleManState.cpp  libOneLife.cpp
server_src/: CMakeLists.txt  CarHandler.cpp  ClientProxy.cpp  Consumable.cpp  ContactListener.cpp  Environment.cpp  Player.cpp  Race.cpp  Server.cpp  StateHandler.cpp  TrackData.cpp  TrackStructure.cpp  main.cpp
server_src/entities/: Boost.cpp  Boulder.cpp  Car.cpp  Health.cpp  Mud.cpp  Oil.cpp  Track.cpp
server_src/mods/: libAlwaysMud.cpp  libOneLife.cpp
